Sent out for review

--- a/docs/main.bib
+++ b/docs/main.bib
@@ -100,6 +100,20 @@ ebib-main-file: /home/alex/Documents/research/references.bib
 	language = "en"
 }
 
+@article{Rodriguez2013,
+	title = {A comparative assessment of linearization methods for bilinear models},
+	journal = {Computers and Chemical Engineering},
+	volume = {48},
+	pages = {218-233},
+	year = {2013},
+	issn = {0098-1354},
+	doi = {https://doi.org/10.1016/j.compchemeng.2012.09.011},
+	url = {https://www.sciencedirect.com/science/article/pii/S009813541200289X},
+	author = {Maria Analia Rodriguez and Aldo Vecchietti},
+	keywords = {MINLP, Linearization methods, Bilinear terms, Discrete decisions},
+	abstract = {In this article, optimization problems with bilinear constraints involving one discrete variable are studied. Several industrial problems present bilinear non-convex constraints which are difficult to solve to global optimality. For this purpose models must be reformulated what in general terms increases the problem size. This article proposes two disjunctive transformation techniques which are compared to other approaches presented in the literature. An analysis is made comparing qualitative and quantitative characteristics of the methods employed. In order to implement proposed transformations, three industrial cases are studied: trim-loss in a paper mill, cutting stock in the production of carton board boxes and the purchase, inventory and delivery optimization problem. All of them are reformulated and solved using the strategies included in the paper. Several instances of each problem are evaluated and their results are analyzed comparing performance of the different methods.}
+}
+
 @article{Rutenbar_1989,
 	doi = {10.1109/101.17235},
 	url = {https://doi.org/10.1109%2F101.17235},
